--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,5 +129,5 @@
     <string name="alert_dialog_message">Please grant location access so this app can track your runs!</string>
     <string name="functionality_limited">Functionality limited</string>
     <string name="no_tracking">Because location access has not been granted, this app will not be able to track new runs.</string>
-    <string name="run_list_run_number">Run #%1$d</string>
+    <string name="run_list_run_number">Run #%1$d, RunID #%2$d</string>
 </resources>
