Redid some changes after restoring some older files to repair problem that arose after I started getting AbstractMethod errors when the program began; reduced number of  messages passed by intents by eliminating messages from the intent server communicating successful results.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,7 +110,7 @@
         <item quantity="one">Deleted %1$d Run, together with %2$d associated Locations</item>
         <item quantity="other">Deleted %1$d Runs, together with %2$d associated Locations</item>
     </plurals>
-    <string name="insert_run_error">Error inserting new Run!</string>
+    <string name="insert_run_error">Error inserting new Run! Error code %1$d</string>
     <string name="starting_address">Start Address:</string>
     <string name="ending_address">End Address:</string>
     <string name="lastlocation_null">Geocoder location is null!</string>
