1) Switched from lambda back to  anonymous ResultCallback class for ResultCallback<Status> in BackgroundLocationServices; 2) Added ability to change distance measurement between imperial and metric units; 3) increased precision of conversion factors for meters to feet and meters to miles; 4) changed onClickListeners in RunFragment back to anonymous  classes from lambdas; 5) added additional condition of isTrackingRun(mRun) to startUpdaingEndAddress in RunFragment; 6) added another broadcast type to RunFragment ResultsReceiver for refresh of UI; 7) simpliified  call to ScheduledThreadPoolExecutor in startUpdatingEndAddress in RunManager; 8) changed mScheduledFuture.cancel(boolean) from false to true; 9) Restructured onLoadFinished() in RunMapFragment into calls to updateMap() and updateTextViews(); 10) corrected initialization of mViewMode in prepareMap() in RunMapFragment(); 11) implemented onPrepareOptionsMenu() in RunMapPagerActivity, RunPagerActivity and RunRecyclerListFragment to alternate titles for menuitem to switch between metric and imperial distances; 12) fixed implementation of "New  Run" menu selection in RunMapPagerActivity; 13) fixed crash error in delete Runs code in RunRecyclerListFragment by checking to see if view to be removed is null;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="ending_altitude">Ending Altitude:</string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
-    <string name="list_distance_text">Distance: %1$.2f miles</string>
+    <string name="list_distance_text">Distance: %1$s </string>
     <string name="list_duration_text">Duration: %1$s</string>
     <string name="new_run">New Run</string>
     <string name="sort">Sort Runs</string>
@@ -92,7 +92,7 @@
     <string name="current_location_too_distant">You are more than 100 meters from where this run
                     originally ended; you can\'t \"continue\" it from here. Cancelling further
                     tracking of this run.</string>
-    <string name="distance_traveled_format">Distance traveled: %s miles</string>
+    <string name="distance_traveled_format">Distance traveled: %s</string>
     <string name="run_duration_format">Run duration: %s</string>
     <string name="location_insert_failed">Insertion of location failed!</string>
     <string name="update_run_start_date_failed">Starting Date update failed! No rows were updated!</string>
@@ -132,4 +132,6 @@
     <string name="functionality_limited">Functionality limited</string>
     <string name="no_tracking">Because location access has not been granted, this app will not be able to track new runs.</string>
     <string name="run_list_run_number">Run #%1$d, RunID #%2$d</string>
+    <string name="imperial">Switch to Metric Distances</string>
+    <string name="metric">Switch to Imperial Distances</string>
 </resources>
