--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,14 +10,18 @@
     <string name="run_fragment_ended">Ended:</string>
     <string name="ending_position">Ending Lat/Long:</string>
     <string name="ending_altitude">Ending Altitude:</string>
+    <string name="error_number">Attempt to connect with Google Play Services failed with Error
+        Number %1$d, errno
+    </string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
-    <string name="list_distance_text">Distance: %1$s </string>
+    <string name="list_distance_text">Distance: %1$s</string>
     <string name="list_duration_text">Duration: %1$s</string>
     <string name="new_run">New Run</string>
     <string name="sort">Sort Runs</string>
     <string name="by_date_asc">Ascending Date</string>
     <string name="by_date_desc">Descending Date</string>
+    <string name="default_channel">Default Notification Channel</string>
     <string name="by_distance_asc">Ascending Distance</string>
     <string name="by_distance_desc">Descending Distance</string>
     <string name="by_duration_asc">Ascending Duration</string>
@@ -77,7 +81,8 @@
     </plurals>
     <string name="goof_up">You must have goofed up somewhere!</string>
     <string name="no_runs">No runs are recorded. Get out and get moving! Press the button below or
-        select "New Run" from the overflow menu to record a run.</string>
+        select "New Run" from the overflow menu to record a run.
+    </string>
     <string name="notification_title">Run Monitor</string>
     <string name="notification_text">Your run is being monitored in the background</string>
     <string name="run_start">Run Start</string>
@@ -85,18 +90,37 @@
     <string name="delete_run">Delete Run</string>
     <string name="distance_covered">Distance covered:</string>
     <string name="current_location_too_distant">You are more than 100 meters from where this run
-                    originally ended; you can\'t \"continue\" it from here. Cancelling further
-                    tracking of this run.</string>
+        originally ended; you can\'t \"continue\" it from here. Cancelling further
+        tracking of this run.
+    </string>
     <string name="location_insert_failed">Insertion of location failed!</string>
-    <string name="update_run_start_date_failed">Starting Date update failed! No rows were updated!</string>
-    <string name="update_run_start_address_failed">Starting Address update failed! No rows were updated!</string>
-    <string name="multiple_start_addresses_error">Starting Address update failed! Multiple rows were updated!</string>
-    <string name="unknown_start_address_error">Error! Unknown return value from Starting Address update!</string>
-    <string name="multiple_runs_dates_updated">Starting Date and Starting Address update failed! Multiple rows were updated!</string>
-    <string name="unknown_start_date_error">Error! Unknown return value from Starting Date update!</string>
-    <string name="update_end_address_failed">Ending Address update failed! No rows were updated!</string>
-    <string name="multiple_runs_end_addresses_updated">Ending Address update failed! Multiple rows were updated!</string>
-    <string name="unknown_end_address_update_error">Error! Unknown return value from Ending Address update!</string>
+    <string name="update_run_start_date_sucess">Successfully updated Starting Date</string>
+    <string name="update_run_start_date_failed">Starting Date update failed! No rows were updated!
+    </string>
+    <string name="update_run_start_address_success">Sucessfully updated Starting Address</string>
+    <string name="update_run_start_address_failed">Starting Address update failed! No rows were
+        updated!
+    </string>
+    <string name="multiple_start_addresses_error">Starting Address update failed! Multiple rows were
+        updated!
+    </string>
+    <string name="unknown_start_address_error">Error! Unknown return value from Starting Address
+        update!
+    </string>
+    <string name="multiple_runs_dates_updated">Starting Date and Starting Address update failed!
+        Multiple rows were updated!
+    </string>
+    <string name="unknown_start_date_error">Error! Unknown return value from Starting Date update!
+    </string>
+    <string name="update_run_end_address_success">Successfully updated End Address for Run</string>
+    <string name="update_end_address_failed">Ending Address update failed! No rows were updated!
+    </string>
+    <string name="multiple_runs_end_addresses_updated">Ending Address update failed! Multiple rows
+        were updated!
+    </string>
+    <string name="unknown_end_address_update_error">Error! Unknown return value from Ending Address
+        update!
+    </string>
     <string name="delete_runs_error">Error deleting Runs!</string>
     <string name="delete_run_error">Error deleting the Run!</string>
     <string name="update_run_error">Error updating Run!</string>
@@ -118,12 +142,21 @@
     <string name="track_start_point">Track Starting Point</string>
     <string name="tracking_off">Tracking Off</string>
     <string name="empty_view_button_text">Press here to start recording a run!</string>
-    <string name="connection_suspended_service_disconnected">GoogleApiClient connection suspended - Remote service disconnected! Trying to fix…</string>
-    <string name="connection_suspended_network_lost">GoogleApiClient suspended - network connection lost! Trying to fix …</string>
+    <string name="connection_suspended_service_disconnected">GoogleApiClient connection suspended -
+        Remote service disconnected! Trying to fix…
+    </string>
+    <string name="connection_suspended_network_lost">GoogleApiClient suspended - network connection
+        lost! Trying to fix …
+    </string>
     <string name="run_list_run_number">Run #%1$d, RunID #%2$d</string>
     <string name="imperial">Switch to Metric</string>
     <string name="metric">Switch to Imperial</string>
     <string name="map_scrolling_on">Turn Scrolling On</string>
     <string name="map_scrolling_off">Turn Scrolling Off</string>
     <string name="settings_menu">Settings</string>
+    <string name="title_activity_dialog">DialogActivity</string>
+    <string name="title_activity_headless">HeadlessActivity</string>
+    <string name="shared_prefs">com.dknutsonlaw.android.runtracker2.shared_prefs</string>
+    <string name="authorities">com.dknutsonlaw.android.runtracker2</string>
+    <string name="ok">OK</string>
 </resources>
