--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,14 @@
 
     <string name="app_name">RunTracker2</string>
     <string name="run_fragment_started">Started:</string>
+    <string name="run_id">Run #%1d</string>
     <string name="position">%1$s Lat., %2$s Long.</string>
-    <string name="starting_position">Starting Lat/Long:</string>
-    <string name="starting_altitude">Starting Altitude:</string>
-    <string name="elapsed_time">Elapsed Time:</string>
+    <string name="starting_position">Start Point:</string>
+    <string name="starting_altitude">Start Alt.:</string>
+    <string name="elapsed_time">Duration:</string>
     <string name="run_fragment_ended">Ended:</string>
-    <string name="ending_position">Ending Lat/Long:</string>
-    <string name="ending_altitude">Ending Altitude:</string>
+    <string name="ending_position">End Point:</string>
+    <string name="ending_altitude">End Alt.:</string>
     <string name="error_number">Attempt to connect with Google Play Services failed with Error
         Number %1$d, errno
     </string>
@@ -88,12 +89,13 @@
     <string name="run_start">Run Start</string>
     <string name="run_finish">Run Finish</string>
     <string name="delete_run">Delete Run</string>
-    <string name="distance_covered">Distance covered:</string>
+    <string name="distance_covered">Distance:</string>
     <string name="current_location_too_distant">You are more than 100 meters from where this run
         originally ended; you can\'t \"continue\" it from here. Cancelling further
-        tracking of this run.
+        tracking of this run.\n
     </string>
-    <string name="location_insert_failed">Insertion of location failed!</string>
+    <string name="location_insert_failed">Insertion of location for Run %1$d failed!\n</string>
+    <string name="duration_and_distance_update_failure">Error updating Distance and Duration for Run %1$d.\n</string>
     <string name="update_run_start_date_success">Successfully updated Starting Date</string>
     <string name="update_run_start_date_failed">Starting Date update failed! No rows were updated!
     </string>
@@ -121,13 +123,21 @@
     <string name="unknown_end_address_update_error">Error! Unknown return value from Ending Address
         update!
     </string>
-    <string name="delete_runs_error">Error deleting Runs!</string>
-    <string name="delete_run_error">Error deleting the Run!</string>
+    <string name="delete_run_success">Run %1$d successfully deleted.\n</string>
+    <string name="delete_run_error">There was an error attempting to delete Run %1$d.\n</string>
+    <string name="delete_run_failure">Run %1$d was not deleted.\n</string>
+    <string name="delete_run_unexpected_return">Unexpected return value while attempting to delete Run %1$d.\n</string>
     <string name="update_run_error">Error updating Run!</string>
-    <string name="delete_locations_error">Error deleting Locations!</string>
+    <string name="delete_locations_error">There was an error deleting locations associated with Run %1$d.\n</string>
+    <plurals name="location_deletion_results">
+        <item quantity="zero">No locations associated with Run %2$d were deleted.\n\n</item>
+        <item quantity="one">One location associated with Run %2$d was deleted.\n\n</item>
+        <item quantity="other">%1$d locations associated with Run %2$d were deleted.\n\n </item>
+    </plurals>
     <plurals name="runs_deletion_results">
-        <item quantity="one">Deleted %1$d Run, together with %2$d associated Locations</item>
-        <item quantity="other">Deleted %1$d Runs, together with %2$d associated Locations</item>
+        <item quantity="zero">Failed to delete any Runs!\n\n</item>
+        <item quantity="one">Deleted %1$d Run, together with %2$d associated Locations.\n\n</item>
+        <item quantity="other">A total of %1$d Runs were deleted, together with %2$d associated locations.\n\n</item>
     </plurals>
     <string name="insert_run_error">Error inserting new Run! Error code %1$d</string>
     <string name="starting_address">Start Address:</string>
