1) Added locationRequest.setSmallestDisplacement(2.5f) call in BackgroundLocationService to reduce spurious location changes, but then commented it out to address cessation of updates when stationary for a minute or so; 2) added mPreviousLocation member to CombinedFragment to help with animation of latest location updates on map; 3)Reversed order of calls to stopLocationUpdates() and stopForeground in CombinedFragment Stop button; 4) changed OnCameraMoveListener in CombinedFragment to change zoom by a fixed increment on press of zoom control rather than trying to catch the changed zoom level itself; 5) fixed failure to update EndAltitude upon change of measurement system in CombinedFragment; 6) changed CONTINUATION_TIME_LIMIT from 30 to 60 seconds in Constants; 7) slight alteration to primary layout files to increase size of map slightly; 8) fixed problem of UpdateEndAddressTask not terminating when Run tracking ends; 9)various formatting changes to comments, annotations of NonNullable parameters, etc.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,8 +129,8 @@
     <string name="delete_locations_unexpected_return">There was an unexpected result from the ContentProvider while attempting to delete locations for Run %1$d.\n</string>
     <plurals name="location_deletion_results">
         <item quantity="zero">No locations associated with Run %2$d were deleted.\n\n</item>
-        <item quantity="one">One location associated with Run %2$d was deleted.\n\n</item>
-        <item quantity="other">%1$d locations associated with Run %2$d were deleted.\n\n </item>
+        <item quantity="one">One location associated with Run %2$d also was deleted.\n\n</item>
+        <item quantity="other">%1$d locations associated with Run %2$d also were deleted.\n\n </item>
     </plurals>
     <plurals name="runs_deletion_results">
         <item quantity="zero">Failed to delete any Runs!\n\n</item>
